...
                                <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                <subviews>
                                    <searchBar contentMode="redraw" restorationIdentifier="SearchBar" translatesAutoresizingMaskIntoConstraints="NO" id="2Q7-be-3fH">
                                        <rect key="frame" x="0.0" y="0.0" width="325" height="50"/>
                                        <constraints>
...
                                        <rect key="frame" x="325" y="0.0" width="50" height="50"/>
                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="SendButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="fFq-YK-k7B"/>
...
                                </constraints>
                            </stackView>
                            <tableView autoresizesSubviews="NO" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="RepositoryListTableView" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFoo
                                <rect key="frame" x="0.0" y="50" width="375" height="671"/>
                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="RepositoryDetailAvatarImageView">
                                                            <bool key="isElement" value="YES"/>
                                                        </accessibility>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Repository Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XKJ-BN-TfV">
                                                        <rect key="frame" x="61.666666666666671" y="250" width="191.66666666666663" height="40"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="RepositoryDetailNameLabel"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="40" id="6ov-ZY-Jbf"/>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6eo-9a-JyX">
                                                <rect key="frame" x="118.33333333333334" y="310" width="78.666666666666657" height="135.33333333333337"/>
                                                <accessibility key="accessibilityConfiguration" identifier="RepositoryDetailDescriptionLabel"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Language" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="lYr-HS-scW">
                                                        <rect key="frame" x="38.999999999999993" y="0.0" width="75.333333333333314" height="20.333333333333332"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="RepositoryDetailLanguageLabel"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Open Issues" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="vNt-Ln-4bo">
                                                        <rect key="frame" x="20.333333333333343" y="25.333333333333258" width="94" height="20.333333333333329"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="RepositoryDetailOpenIssuesCountLabel"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Watcher Count" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="SM9-YY-vkU">
                                                        <rect key="frame" x="0.0" y="50.666666666666629" width="114.33333333333333" height="20.333333333333329"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="RepositoryDetailWatchersCountLabel"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Star Count" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="L6d-fv-mZk">
                                                        <rect key="frame" x="32.666666666666664" y="76" width="81.666666666666686" height="20.333333333333329"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="RepositoryDetailStarCountLabel"/>
