<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RepositoryCell" customModule="GitHubRepositorySearcher" customModuleProvider="target"/>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RepositoryCell" rowHeight="100" id="KGk-i7-Jjw" customClass="RepositoryCell" customModule="GitHubRepositorySearcher" customModuleProvider="target">
            <rect key="frame" x="0.0" y="0.0" width="340" height="100"/>
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                <rect key="frame" x="0.0" y="0.0" width="340" height="100"/>
                <autoresizingMask key="autoresizingMask"/>
                <subviews>
                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="77" translatesAutoresizingMaskIntoConstraints="NO" id="8Fc-MU-KYd">
                        <rect key="frame" x="15" y="15" width="310" height="70"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="5Ln-pj-roD">
                                <rect key="frame" x="0.0" y="13.333333333333332" width="161.33333333333334" height="43.333333333333343"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="RepositoryCell" text="Repository Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nah-0f-lkK">
                                        <rect key="frame" x="0.0" y="0.0" width="157.33333333333334" height="25.333333333333332"/>
                                        <accessibility key="accessibilityConfiguration" identifier="RepositoryCellNameLabel"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dyp-XZ-QAS">
                                        <rect key="frame" x="0.0" y="26.333333333333329" width="74" height="17"/>
                                        <accessibility key="accessibilityConfiguration" identifier="RepositoryCellDescriptionLabel"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                            </stackView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Language" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e8m-2c-5eW">
                                <rect key="frame" x="238.33333333333334" y="25.333333333333336" width="71.666666666666657" height="19.333333333333336"/>
                                <accessibility key="accessibilityConfiguration" identifier="RepositoryCellLanguageLabel"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="7jc-Ce-t5L"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <constraints>
                            <constraint firstItem="5Ln-pj-roD" firstAttribute="leading" secondItem="8Fc-MU-KYd" secondAttribute="leading" id="Hjh-FK-HX5"/>
                        </constraints>
                    </stackView>
                </subviews>
                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                <constraints>
                    <constraint firstItem="8Fc-MU-KYd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="Pya-g5-J98"/>
                    <constraint firstAttribute="trailing" secondItem="8Fc-MU-KYd" secondAttribute="trailing" constant="15" id="fJK-lC-MpQ"/>
                    <constraint firstItem="8Fc-MU-KYd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="fZx-q8-RGC"/>
                    <constraint firstAttribute="bottom" secondItem="8Fc-MU-KYd" secondAttribute="bottom" constant="15" id="zRI-d9-3pe"/>
                </constraints>
            </tableViewCellContentView>
            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
            <connections>
                <outlet property="descriptionLabel" destination="Dyp-XZ-QAS" id="G3w-XD-TZ0"/>
                <outlet property="languageLabel" destination="e8m-2c-5eW" id="ZNI-W7-DBu"/>
                <outlet property="repositoryNameLabel" destination="Nah-0f-lkK" id="bji-Xu-4cO"/>
            </connections>
            <point key="canvasLocation" x="-6.1068702290076331" y="18.30985915492958"/>
        </tableViewCell>
    </objects>
</document>
